Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
CMake
CMake
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,195
    • Issues 3,195
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 15
    • Merge Requests 15
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • External Wiki
    • External Wiki
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • CMake
  • CMakeCMake
  • Issues
  • #21486

Closed
Open
Opened Nov 23, 2020 by Brad King@brad.kingOwner

3.19.0 regressed setting CMAKE_MAKE_PROGRAM in toolchain files

Commit d5b5c192 from !4898 (merged) moved the selection of CMAKE_MAKE_PROGRAM to earlier than it has ever been before. It now occurs before CMAKE_TOOLCHAIN_FILE is loaded, which breaks toolchain files that set CMAKE_MAKE_PROGRAM. This was reported on discourse.

See also discussion in !4898 (comment 780420) about the ordering.

Edited Nov 23, 2020 by Brad King
To upload designs, you'll need to enable LFS and have admin enable hashed storage. More information
Assignee
Assign to
3.19.1
Milestone
3.19.1 (Past due)
Assign milestone
Time tracking
None
Due date
None
Reference: cmake/cmake#21486